--- a/css/style.css
+++ b/css/style.css
@@ -324,14 +324,12 @@ p{
 .hero .hero-image {
     position: relative;
     text-align: center;
-    min-width: 80%;
-    width: 80%;
     margin: 0 auto;
 }
 
 .hero .hero-image img {
-    max-width: 35%;
-    max-height: 35%;
+    width: 300px; /* Adjust the width as needed */
+    height: 300px;
     text-align: center;
     margin-bottom: 30px;
     border-radius: 180px;
@@ -945,6 +943,11 @@ p{
     object-fit: cover;
     transform: scale(1.1);
     transition: .5s;
+}
+
+.portfolio .btn {
+ color: white;
+ background-color: #fff;
 }
 
 .portfolio .portfolio-item:hover img {
@@ -1668,4 +1671,90 @@ p{
         line-height: 16px;
         padding: 0 5px;
     }
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+}
+
+.popup-content {
+    position: absolute;
+    display: flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -45%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    min-width: 80%; /* Adjust the maximum width as needed */
+    min-height: 80%; /* Adjust the maximum height as needed */
+    max-width: 80%;
+    max-height: 80%;
+    overflow: auto; /* Add a scrollbar when content overflows */
+}
+
+.popup-header {
+    flex: 1; /* Distribute space evenly between header and body */
+    padding: 20px;
+    background-color: #ffffff;
+    justify-content: center;
+    display: flex; /* Use flexbox for layout */
+    flex-direction: column; /* Stack text and image vertically */
+}
+
+.popup-header h3 {
+    margin: 0;
+}
+
+.popup-body {
+    flex: 1; /* Distribute space evenly between header and body */
+    display: flex; /* Use flexbox for layout */
+    flex-direction: column; /* Stack text and image vertically */
+    padding: 20px;
+}
+
+.project-popup-image img{
+    max-width: 40%;
+    max-height: 40%;
+}
+
+.popup-text {
+    flex: 1; /* Allow text to grow and take available space */
+    overflow-y: auto; /* Add scrollbar when content overflows */
+}
+
+.popup-text h3{
+    font-family: 'exo', sans-serif;
+    color: #000000;
+    padding-top: 15px;
+    padding-bottom: 5px;
+    font-size: 20px;
+}
+
+.popup-text p{
+    font-family: 'exo', sans-serif;
+    color: #000000;
+    font-size: 17px;
+}
+
+.popup-text li{
+    font-family: 'exo', sans-serif;
+    color: #000000;
+    font-size: 17px;
+}
+
+.close-popup {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
 }
