--- a/css/style.css
+++ b/css/style.css
@@ -742,14 +742,16 @@ p{
 
 .experience .timeline .timeline-text h4 {
     margin: 0 0 10px 0;
-    font-size: 16px;
+    font-size: 18px;
     font-style: italic;
+    color:#000000;
     font-weight: 400;
 }
 
 .experience .timeline .timeline-text p {
     margin: 0;
     font-size: 16px;
+    color:#000000;
 }
 
 @media (max-width: 767.98px) {
@@ -947,7 +949,6 @@ p{
 
 .portfolio .btn {
  color: white;
- background-color: #fff;
 }
 
 .portfolio .portfolio-item:hover img {
@@ -975,18 +976,27 @@ p{
     overflow: hidden;
 }
 
+.project-extra-btn h3{
+    width: calc(100% - 125px) !important;
+}
+
 .portfolio .portfolio-text a.btn {
     width: 50px;
     height: 50px;
     padding: 0 0 2px 1px;
     display: flex;
+    border-color: #00bbff;
     align-items: center;
     justify-content: center;
     font-size: 45px;
     font-weight: 100;
 }
 
-.portfolio .portfolio-item:hover a.btn {
+.portfolio-text:hover{
+    color: #00bbff;
+}
+
+.portfolio .portfolio-item:hover a.btn a.steam-btn {
     color: rgba(0, 187, 255, 1);
     background: transparent;
     box-shadow: inset 0 0 0 0 rgba(0, 187, 255, 1);
@@ -1685,29 +1695,42 @@ p{
 }
 
 .popup-content {
+    /*background:  linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/LK_background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;*/
     position: absolute;
     display: flex;
-    top: 50%;
+    top: 46%;
     left: 50%;
     transform: translate(-50%, -45%);
     background-color: #fff;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    min-width: 80%; /* Adjust the maximum width as needed */
-    min-height: 80%; /* Adjust the maximum height as needed */
-    max-width: 80%;
-    max-height: 80%;
+    min-width: 85%; /* Adjust the maximum width as needed */
+    min-height: 90%; /* Adjust the maximum height as needed */
+    max-width: 85%;
+    max-height: 90%;
+    flex-direction: column;
     overflow: auto; /* Add a scrollbar when content overflows */
 }
 
 .popup-header {
     flex: 1; /* Distribute space evenly between header and body */
     padding: 20px;
-    background-color: #ffffff;
+    align-items: center;
+    background-color: transparent;
     justify-content: center;
     display: flex; /* Use flexbox for layout */
     flex-direction: column; /* Stack text and image vertically */
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+
+.popup-header h2 {
+    margin: 0;
 }
 
 .popup-header h3 {
@@ -1716,9 +1739,27 @@ p{
 
 .popup-body {
     flex: 1; /* Distribute space evenly between header and body */
+    display: flex;
+    flex-direction: column; /* Arrange left and right content side by side */
+    max-height: calc(85% - 60px); /* Subtract the header height from 85% */
+    overflow-y: auto; /* Add scrollbar when content overflows */
+    padding: 20px; /* Add padding to the right content */
+}
+
+.popup-part {
     display: flex; /* Use flexbox for layout */
-    flex-direction: column; /* Stack text and image vertically */
-    padding: 20px;
+    flex-direction: row; /* Stack text and image vertically */
+    padding: 0px;
+    align-items: center;
+}
+
+.popup-section-with-separator {
+    border-bottom: 3px solid #5b5b5b; /* Add a separator under this section */
+    padding-bottom: 30px; /* Add some spacing between sections */
+}
+
+.popup-top-space {
+    padding-top: 10px; /* Add some spacing between sections */
 }
 
 .project-popup-image img{
@@ -1726,8 +1767,33 @@ p{
     max-height: 40%;
 }
 
-.popup-text {
-    flex: 1; /* Allow text to grow and take available space */
+.popup-gif {
+    display: flex;
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
+    max-width: 90%;
+    max-height: 90%;
+}
+
+.popup-gif img {
+    max-width: 100%; /* Ensure the image doesn't exceed the container */
+    max-height: 100%;
+}
+
+.popup-left, .popup-right {
+    display: flex; /* Stack content vertically */
+    flex-direction: column; /* Stack content vertically */
+    padding: 0; /* Remove padding to minimize spacing */
+}
+
+.popup-left {
+    flex: 55%;
+    margin-top: 0px; /* Adjust margin as needed */
+    margin-right: 20px;
+}
+
+.popup-right {
+    flex: 45%; /* Allow text to grow and take available space */
     overflow-y: auto; /* Add scrollbar when content overflows */
 }
 
@@ -1751,26 +1817,208 @@ p{
     font-size: 17px;
 }
 
-.close-popup {
+.popup-left #videoIframe {
+    width: 100%;
+    height: 100%; /* Allow the video to resize based on container height */
+    top: 0;
+    left: 0;
     position: absolute;
-    top: 10px;
+}
+
+.iframe-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    width: 100%;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 992px) {
+    .popup-part {
+        flex-direction: column; /* Change to column layout */
+    }
+
+    .popup-left {
+        height: 100%;
+        width: 100%;
+        margin-right: 0px;
+    }
+
+}
+
+.close-popup {
+    position:  absolute;
+    top: -5px;
     right: 10px;
-    font-size: 20px;
+    font-size: 50px;
+    color: #000000;
+    cursor: pointer;
+    z-index: 2;
+    padding: 5px 10px;
+}
+
+.close-popup:hover{
+    position:  absolute;
+    top: -5px;
+    right: 10px;
+    font-size: 50px;
+    color: #00a2ff;
+    cursor: pointer;
+    z-index: 2;
+    padding: 5px 10px;
+}
+
+/* Style the carousel container */
+.popup-carousel {
+    width: 100%; /* Adjust to your desired width */
+    overflow: hidden;
+    position: relative;
+    text-align: center; /* Center align the content */
+}
+
+.popup-carousel img{
+    min-width: 60%;
+    min-height: 60%;
+    max-width: 60%; /* Ensure the image doesn't exceed the container */
+    max-height: 60%;
+}
+
+/* Style the carousel slides container */
+.carousel-slides {
+    display: flex; /* Display slides in a row */
+    justify-content: center; /* Center align slides horizontally */
+    align-items: center; /* Center align slides vertically */
+}
+
+/* Style the individual carousel slide */
+.carousel-slide {
+    width: 100%; /* Each slide takes the full width of the container */
+    height: 100%; /* Each slide takes the full height of the container */
+    display: none; /* Hide all slides by default */
+}
+
+.carousel-slide img {
+    width: 100%; /* Each slide takes the full width of the container */
+    height: 100%; /* Each slide takes the full height of the container */
+}
+
+/* Style the carousel buttons */
+.carousel-button {
+    position: absolute;
+    top: 50%; /* Vertically center the buttons */
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    font-size: 60px;
     cursor: pointer;
 }
 
-.carousel-item img{
-    max-width: 90%;
-    max-height: 90%;
+.carousel-button:hover {
+    color: #00a2ff;
+}
+
+#prevButton {
+    left: 0;
+    margin-left: 16%; /* Adjust the margin as needed */
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/* Style the "Next" button */
+#nextButton {
+    right: 0;
+    left: auto; /* Remove left alignment for the "Next" button */
+    margin-right: 16%; /* Adjust the margin as needed */
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/* Show the first slide by default */
+.carousel-slide:first-child {
     display: block;
-    margin: 0 auto; /* Add this to center horizontally */
 }
 
-.carousel-control-prev {
-    border: 7.5px solid rgba(0, 0, 0, .15);
+/* Style the dots container */
+.carousel-dots {
+    text-align: center;
+    margin-top: 10px; /* Adjust the margin as needed */
 }
 
-.carousel-control-next {
+/* Style each dot */
+.carousel-dot {
+    width: 10px; /* Fixed width for the dots */
+    height: 10px; /* Fixed height for the dots */
+    background-color: #999; /* Inactive dot color */
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0 5px; /* Adjust the margin as needed */
+    cursor: pointer;
+}
+
+/* Style the active dot */
+.carousel-dot.active {
+    width: 13px; /* Fixed width for the dots */
+    height: 13px; /* Fixed height for the dots */
+    background-color: #00bbff;; /* Active dot color */
+}
+
+/* Media query for smaller screens */
+@media (max-width: 992px){
+
+    .popup-carousel img{
+        min-width: 80%;
+        min-height: 80%;
+        max-width: 80%; /* Ensure the image doesn't exceed the container */
+        max-height: 80%;
+    }
+
+    #prevButton {
+        left: 0;
+        margin-left: 0%; /* Adjust the margin as needed */
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+    }
     
-    border: 7.5px solid rgba(0, 0, 0, .15);
+    /* Style the "Next" button */
+    #nextButton {
+        right: 0;
+        left: auto; /* Remove left alignment for the "Next" button */
+        margin-right: 0%; /* Adjust the margin as needed */
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+    z-index: 0; /* Adjust the z-index to make sure it's on top of everything */
+}
+
+
+.steam-btn {
+    display: flex;
+    font-size: 35px !important;
+    place-content: center;
+    /* width: 50px; */
+    /* height: 50px; */
+    align-items: center;
+    margin-right: 5px; /* Adjust the margin as needed to separate the buttons */
+    text-decoration: none; /* Remove the default link underline */
+}
+
+.steam-btn:hover {
+    color: rgba(0, 187, 255, 1);
+    background: transparent;
+    box-shadow: inset 0 0 0 0 rgba(0, 187, 255, 1);
+    border-color: rgba(0, 187, 255, 1);
 }
