--- a/css/style.css
+++ b/css/style.css
@@ -2037,3 +2037,7 @@ p{
     box-shadow: inset 0 0 0 0 rgba(0, 187, 255, 1);
     border-color: rgba(0, 187, 255, 1);
 }
+
+.hidden {
+    display: none;
+  }
