--- a/css/style.css
+++ b/css/style.css
@@ -2,38 +2,39 @@
 /********* General CSS *********/
 /*******************************/
 body {
-    color: #797979;
-    background: #ffffff;
+    background-color: var(--background-color);
+    color: var(--text-color);
     font-family: 'Montserrat', sans-serif;
+    transition: background-color 0.25s ease, box-shadow 0.25s ease, text-color 0.25s ease;
 }
 
 h1,
 h2{
-    color: #000000;
+    color: var(--text-color);
     font-family: 'Orbitron', sans-serif;
 } 
 h3{
-    color: #000000;
+    color: var(--text-color);
     font-family: 'exo', sans-serif;
 } 
 h4{
-    color: #000000;
+    color: var(--text-color);
     font-family: 'exo', sans-serif;
 }
 h5, 
 h6 {
-    color: #414141;
+    color: var(--text-color);
 }
 
 a {
-    color: #313131;
+    color: var(--text-color);
     transition: .3s;
 }
 
 a:hover,
 a:active,
 a:focus {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     outline: none;
     text-decoration: none;
 }
@@ -58,20 +59,20 @@ p{
     font-family: 'exo', sans-serif;
     letter-spacing: 1px;
     color: #ffffff;
-    background: rgba(0, 187, 255, 1);
+    background: #00BDFF;
     border: 2px solid transparent;
     border-radius: 15px;
-    box-shadow: inset 0 0 0 50px rgba(0, 187, 255, 1);
+    box-shadow: inset 0 0 0 50px #00BDFF;
     transition: ease-out 0.3s;
     -webkit-transition: ease-out 0.3s;
     -moz-transition: ease-out 0.3s;
 }
 
 .btn:hover {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     background: transparent;
-    box-shadow: inset 0 0 0 0 rgba(0, 187, 255, 1);
-    border-color: rgba(0, 187, 255, 1);
+    box-shadow: inset 0 0 0 0 #00BDFF;
+    border-color: #00BDFF;
 }
 
 
@@ -84,7 +85,7 @@ p{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #ffffff;
+    background: var(--background-color);
     opacity: 0;
     visibility: hidden;
     -webkit-transition: opacity .3s ease-out, visibility 0s linear .3s;
@@ -106,7 +107,7 @@ p{
     width: 45px;
     height: 45px;
     border: 5px solid #dddddd;
-    border-top: 5px solid rgba(0, 187, 255, 1);
+    border-top: 5px solid #00BDFF;
     border-radius: 50%;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
@@ -332,7 +333,7 @@ p{
     height: 300px;
     text-align: center;
     margin-bottom: 30px;
-    border-radius: 180px;
+    border-radius: 50%;
     border: 7.5px solid rgba(0, 0, 0, .15);
     display: block; /* Ensure the image is centered correctly */
     margin-left: auto; /* Center horizontally */
@@ -501,17 +502,18 @@ p{
     font-weight: 600;
     letter-spacing: 1px;
     text-transform: uppercase;
-    background: #ffffff;
+    background: transparent;
 }
 
 .section-header p::before {
     position: absolute;
     content: "";
+    width: 30px;
     height: 3px;
     top: 11px;
     right: 0;
     left: -30px;
-    background: rgba(0, 187, 255, 1);
+    background: #00BDFF;
     z-index: -1;
 }
 
@@ -522,7 +524,7 @@ p{
     height: 3px;
     top: 11px;
     left: 3px;
-    background: rgba(0, 187, 255, 1);
+    background: #00BDFF;
     z-index: 1;
 }
 
@@ -575,7 +577,7 @@ p{
 }
 
 .about .about-text p {
-    color:#272727;
+    color: var(--text-color);
     font-size: 19px;
 }
 
@@ -606,7 +608,7 @@ p{
 
 .about .progress .progress-bar {
     width: 0px;
-    background: rgba(0, 187, 255, 1);
+    background: #00BDFF;
     border-radius: 10px;
     transition: 2s;
 }
@@ -639,7 +641,7 @@ p{
     content: '';
     position: absolute;
     width: 2px;
-    background: rgba(0, 187, 255, 1);
+    background: #00BDFF;
     top: 0;
     bottom: 0;
     left: 50%;
@@ -671,7 +673,7 @@ p{
     top: 48px;
     right: -8px;
     background: #ffffff;
-    border: 2px solid rgba(0, 187, 255, 1);
+    border: 2px solid #00BDFF;
     border-radius: 16px;
     z-index: 1;
 }
@@ -704,7 +706,7 @@ p{
     font-size: 16px;
     font-weight: 600;
     font-family: 'exo', sans-serif;
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     text-transform: uppercase;
     letter-spacing: 1px;
     z-index: 1;
@@ -722,11 +724,11 @@ p{
 
 .experience .timeline .timeline-text {
     padding: 30px;
-    background: #ffffff;
+    background: var(--background-color);
     position: relative;
     border-radius: 15px;
     border-right: 5px solid #dddddd;
-    box-shadow: 0 0 60px rgba(0, 0, 0, .08);
+    box-shadow: 0 0 3px var(--text-color);
 }
 
 .experience .timeline .timeline-item.right .timeline-text {
@@ -744,14 +746,14 @@ p{
     margin: 0 0 10px 0;
     font-size: 18px;
     font-style: italic;
-    color:#000000;
+    color:var(--text-color);
     font-weight: 400;
 }
 
 .experience .timeline .timeline-text p {
     margin: 0;
     font-size: 16px;
-    color:#000000;
+    color:var(--text-color);
 }
 
 @media (max-width: 767.98px) {
@@ -821,7 +823,7 @@ p{
 }
 
 .service .service-item:hover {
-    box-shadow: inset 800px 0 0 0 rgba(0, 187, 255, 1);
+    box-shadow: inset 800px 0 0 0 #00BDFF;
 }
 
 .service .service-icon {
@@ -831,14 +833,14 @@ p{
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid rgba(0, 187, 255, 1);
+    border: 1px solid #00BDFF;
     background: #ffffff;
 }
 
 .service .service-icon i {
     position: relative;
     font-size: 60px;
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     transition: .3s;
 }
 
@@ -907,10 +909,10 @@ p{
     font-size: 14px;
     font-weight: 600;
     color: #ffffff;
-    background: rgba(0, 187, 255, 1);
+    background: #00BDFF;
     border: 2px solid transparent;
     border-radius: 0;
-    box-shadow: inset 0 0 0 50px rgba(0, 187, 255, 1);
+    box-shadow: inset 0 0 0 50px #00BDFF;
     transition: ease-out 0.3s;
     -webkit-transition: ease-out 0.3s;
     -moz-transition: ease-out 0.3s;
@@ -919,10 +921,10 @@ p{
 
 .portfolio #portfolio-filter li:hover,
 .portfolio #portfolio-filter li.filter-active {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     background: transparent;
-    box-shadow: inset 0 0 0 0 rgba(0, 187, 255, 1);
-    border-color: rgba(0, 187, 255, 1);
+    box-shadow: inset 0 0 0 0 #00BDFF;
+    border-color: #00BDFF;
 }
 
 .portfolio .portfolio-item {
@@ -965,8 +967,8 @@ p{
     border-radius: 15px;
     display: flex;
     align-items: center;
-    background: #ffffff;
-    box-shadow: 0 0 15px rgba(0, 0, 0, .12);
+    background: var(--background-color);
+    box-shadow: 0 0 3px var(--text-color);
 }
 
 .portfolio .portfolio-text h3 {
@@ -987,7 +989,7 @@ p{
     height: 50px;
     padding: 0 0 2px 1px;
     display: flex;
-    border-color: #00bbff;
+    border-color: #00BDFF;
     align-items: center;
     justify-content: center;
     font-size: 45px;
@@ -995,14 +997,14 @@ p{
 }
 
 .portfolio-text:hover{
-    color: #00bbff;
+    color: #00BDFF;
 }
 
 .portfolio .portfolio-item:hover a.btn a.steam-btn {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     background: transparent;
-    box-shadow: inset 0 0 0 0 rgba(0, 187, 255, 1);
-    border-color: rgba(0, 187, 255, 1);
+    box-shadow: inset 0 0 0 0 #00BDFF;
+    border-color: #00BDFF;
 }
 
 
@@ -1014,7 +1016,7 @@ p{
     width: 100%;
     margin: 45px 0;
     padding: 90px 0;
-    background: rgba(0, 187, 255, 1);
+    background: #00BDFF;
 }
 
 .banner .container {
@@ -1051,7 +1053,7 @@ p{
 
 .banner .banner-text .btn {
     margin-top: 15px;
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     background: #ffffff;
     box-shadow: inset 0 0 0 50px #ffffff;
 }
@@ -1105,7 +1107,7 @@ p{
 }
 
 .price .price-item.featured-item .price-header {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
 }
 
 .price .price-title h2 {
@@ -1135,7 +1137,7 @@ p{
 }
 
 .price .price-item.featured-item h2 {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
 }
 
 .price .price-body {
@@ -1171,15 +1173,15 @@ p{
 
 .price .price-item.featured-item .price-action .btn {
     color: #ffffff;
-    background: rgba(0, 187, 255, 1);
-    box-shadow: inset 0 0 0 50px rgba(0, 187, 255, 1);
+    background: #00BDFF;
+    box-shadow: inset 0 0 0 50px #00BDFF;
 }
 
 .price .price-item.featured-item .price-action .btn:hover {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     background: transparent;
-    box-shadow: inset 0 0 0 0 rgba(0, 187, 255, 1);
-    border-color: rgba(0, 187, 255, 1);
+    box-shadow: inset 0 0 0 0 #00BDFF;
+    border-color: #00BDFF;
 }
 
 
@@ -1222,7 +1224,7 @@ p{
 }
 
 .team .team-text h2 {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 5px;
@@ -1261,7 +1263,7 @@ p{
 }
 
 .team .team-item:hover {
-    box-shadow: inset 800px 0 0 0 rgba(0, 187, 255, 1);
+    box-shadow: inset 800px 0 0 0 #00BDFF;
 }
 
 .team .team-item:hover .team-img img {
@@ -1311,7 +1313,7 @@ p{
     position: relative;
     margin: 45px 0;
     padding: 90px 0;
-    background: rgba(0, 187, 255, 1);
+    background: #00BDFF;
 }
 
 .testimonial .container {
@@ -1363,7 +1365,7 @@ p{
 }
 
 .testimonial .testimonial-text h3 {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 10px;
@@ -1401,7 +1403,7 @@ p{
     position: relative;
     width: 100%;
     margin: 45px 0;
-    background: rgba(0, 187, 255, 1);
+    background: #00BDFF;
 }
 
 .contact .container-fluid {
@@ -1412,7 +1414,7 @@ p{
 .contact .contact-form {
     position: relative;
     padding: 90px 0 90px 45px;
-    background: rgba(0, 187, 255, 1);
+    background: #00BDFF;
 }
 
 .contact .contact-form input {
@@ -1446,7 +1448,7 @@ p{
 
 .contact .contact-form .btn {
     margin-top: 35px;
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     background: #ffffff;
     box-shadow: inset 0 0 0 50px #ffffff;
 }
@@ -1627,7 +1629,7 @@ p{
 }
 
 .footer .footer-social a:hover i {
-    color: #00bbff;
+    color: #00BDFF;
 }
 
 .footer .copyright {
@@ -1705,10 +1707,10 @@ p{
     top: 46%;
     left: 50%;
     transform: translate(-50%, -45%);
-    background-color: #fff;
+    background-color: var(--background-color);
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 3px var(--text-color);
     min-width: 85%; /* Adjust the maximum width as needed */
     min-height: 90%; /* Adjust the maximum height as needed */
     max-width: 85%;
@@ -1733,10 +1735,12 @@ p{
 
 .popup-header h2 {
     margin: 0;
+    color: var(--text-color);
 }
 
 .popup-header h3 {
     margin: 0;
+    color: var(--text-color);
 }
 
 .popup-body {
@@ -1801,7 +1805,7 @@ p{
 
 .popup-text h3{
     font-family: 'exo', sans-serif;
-    color: #000000;
+    color: var(--text-color);
     padding-top: 15px;
     padding-bottom: 5px;
     font-size: 20px;
@@ -1809,13 +1813,13 @@ p{
 
 .popup-text p{
     font-family: 'exo', sans-serif;
-    color: #000000;
+    color: var(--text-color);
     font-size: 17px;
 }
 
 .popup-text li{
     font-family: 'exo', sans-serif;
-    color: #000000;
+    color: var(--text-color);
     font-size: 17px;
 }
 
@@ -1853,7 +1857,7 @@ p{
     top: -5px;
     right: 10px;
     font-size: 50px;
-    color: #000000;
+    color: var(--text-color);;
     cursor: pointer;
     z-index: 2;
     padding: 5px 10px;
@@ -1864,7 +1868,7 @@ p{
     top: -5px;
     right: 10px;
     font-size: 50px;
-    color: #00a2ff;
+    color: #00BDFF;
     cursor: pointer;
     z-index: 2;
     padding: 5px 10px;
@@ -1913,10 +1917,11 @@ p{
     border: none;
     font-size: 60px;
     cursor: pointer;
+    color: var(--text-color);
 }
 
 .carousel-button:hover {
-    color: #00a2ff;
+    color: #00BDFF;
 }
 
 .prevButton {
@@ -1961,7 +1966,7 @@ p{
 .carousel-dot.active {
     width: 13px; /* Fixed width for the dots */
     height: 13px; /* Fixed height for the dots */
-    background-color: #00bbff;; /* Active dot color */
+    background-color: #00BDFF;; /* Active dot color */
 }
 
 /* Media query for smaller screens */
@@ -2017,10 +2022,10 @@ p{
 }
 
 .steam-btn:hover {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     background: transparent;
-    box-shadow: inset 0 0 0 0 rgba(0, 187, 255, 1);
-    border-color: rgba(0, 187, 255, 1);
+    box-shadow: inset 0 0 0 0 #00BDFF;
+    border-color: #00BDFF;
 }
 
 .github-btn{
@@ -2032,12 +2037,60 @@ p{
 }
 
 .github-btn:hover {
-    color: rgba(0, 187, 255, 1);
+    color: #00BDFF;
     background: transparent;
-    box-shadow: inset 0 0 0 0 rgba(0, 187, 255, 1);
-    border-color: rgba(0, 187, 255, 1);
+    box-shadow: inset 0 0 0 0 #00BDFF;
+    border-color: #00BDFF;
 }
 
 .hidden {
     display: none;
   }
+
+  :root {
+    --background-color: #fff;
+    --text-color: #000;
+}
+
+/* Dark Mode */
+.dark-mode {
+    --background-color: #222;
+    --text-color: #fff;
+}
+
+.dark-mode-container{
+    display: flex;
+    align-items: center;
+    
+    padding-left: 20px;
+    margin-right: -60px;
+}
+
+.dark-mode-button {
+    color: white;
+    background: transparent;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 20px;
+}
+
+.dark-mode-button:focus{
+    outline: none;
+}
+
+.dark-mode-button:hover {
+    color: black;
+    background-color: white;
+    transition: ease-out 0.3s;
+}
+
+@media (max-width: 992px) {
+    .dark-mode-container{
+        display: flex;
+        align-items: center;
+        padding-left: 0px;
+        margin-right:  0px;
+    }
+}
